--- a/lang/en.json
+++ b/lang/en.json
@@ -157,5 +157,6 @@
   "payment" : "Payment",
   "reschedule" : "Reschedule",
   "cancel_appointment" : "Cancel Appointment",
-  "cancel_appointment_message" : "Are you sure you want to cancel the appointment?"
+  "cancel_appointment_message" : "Are you sure you want to cancel the appointment?",
+  "try_again" : "Try Again"
 }
