feat(appointments): add rescheduling functionality and update related UI components

--- a/lang/en.json
+++ b/lang/en.json
@@ -158,5 +158,6 @@
   "reschedule" : "Reschedule",
   "cancel_appointment" : "Cancel Appointment",
   "cancel_appointment_message" : "Are you sure you want to cancel the appointment?",
-  "try_again" : "Try Again"
+  "try_again" : "Try Again",
+  "reschedule_message" : "Are you sure you want to reschedule the appointment?"
 }
