--- a/lang/ar.json
+++ b/lang/ar.json
@@ -160,5 +160,9 @@
    "cancel_appointment" : "الغاء الحجز",
    "cancel_appointment_message" : "هل أنت متأكد من أنك تريد الغاء الحجز؟",
    "try_again" : "أعادة المحاولة",
-   "reschedule_message" : "هل أنت متأكد من أنك تريد اعادة جدولة الحجز؟"
+   "reschedule_message" : "هل أنت متأكد من أنك تريد اعادة جدولة الحجز؟",
+   "work_start_time_from": "وقت البدء من",
+   "to": "حتى",
+   "day": "يوم",
+   "days": "ايام"
   }
