--- a/lang/en.json
+++ b/lang/en.json
@@ -159,5 +159,10 @@
   "cancel_appointment" : "Cancel Appointment",
   "cancel_appointment_message" : "Are you sure you want to cancel the appointment?",
   "try_again" : "Try Again",
-  "reschedule_message" : "Are you sure you want to reschedule the appointment?"
+  "reschedule_message" : "Are you sure you want to reschedule the appointment?",
+  "work_start_time_from": "Work Start Time From",
+  "to": "to",
+  "day": "Day",
+  "days": "Days"
+ 
 }
