feat(appointment_doctor): add availability bottom sheet and custom app bar for managing working hours

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -164,5 +164,12 @@
    "work_start_time_from": "وقت البدء من",
    "to": "حتى",
    "day": "يوم",
-   "days": "ايام"
+   "days": "ايام",
+   "from": "من",
+   "add_working_hours": "اضافة ساعات العمل",
+   "select_working_day": "حدد يوم العمل",
+   "back": "رجوع",
+   "save": "حفظ",
+   "start_time": "وقت البدء",
+   "end_time": "وقت الانتهاء"
   }
