--- a/lang/ar.json
+++ b/lang/ar.json
@@ -186,5 +186,9 @@
    "add_working_time_success": "تم اضافة ساعات العمل بنجاح",
    "add_working_time_failed": "فشل اضافة ساعات العمل",
    "update_working_time_failed": "فشل تحديث ساعات العمل",
-   "delete_working_time_failed": "فشل حذف ساعات العمل"
+   "delete_working_time_failed": "فشل حذف ساعات العمل",
+   "first_name": "الاسم الاول",
+   "last_name": "الاسم الاخير",
+   "bio": "السيرة الذاتية"
+ 
   }
