--- a/lang/en.json
+++ b/lang/en.json
@@ -185,6 +185,8 @@
   "add_working_time_success": "Working time added successfully",
   "add_working_time_failed": "Failed to add working time",
   "update_working_time_failed":  "Failed to update working time",
-  "delete_working_time_failed":   "Failed to delete working time"
- 
+  "delete_working_time_failed":   "Failed to delete working time",
+  "first_name": "First Name",
+  "last_name": "Last Name",
+  "bio": "Bio" 
 }
