feat(profile): add clinic address fields and integrate location selection in complete profile form

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -197,6 +197,8 @@
    "city": "المدينة",
    "area": "المنطقة",
    "street": "الشارع",
-   "special_mark": "علامة خاص"
+   "special_mark": "علامة خاص",
+   "clinic_address_description": "يرجى ادخال عنوان عيادتك بشكل دقيق للمساعدة في الوصول إليك بسهولة للمرضى.",
+   "clinic_address": "عنوان العيادة"
  
   }
