--- a/lang/en.json
+++ b/lang/en.json
@@ -196,6 +196,8 @@
   "city":  "City",
   "area":  "Area",
   "street":  "Street",
- "special_mark": "Special Mark"
+ "special_mark": "Special Mark",
+  "clinic_address_description": "Please enter your clinic's address accurately, including governorate, city, area, and street name to help patients reach you easily.",
+  "clinic_address": "Clinic Address" 
  
 }
