feat(complete_profile): add price validation and update button labels in complete profile form

--- a/lang/en.json
+++ b/lang/en.json
@@ -198,6 +198,8 @@
   "street":  "Street",
  "special_mark": "Special Mark",
   "clinic_address_description": "Please enter your clinic's address accurately, including governorate, city, area, and street name to help patients reach you easily.",
-  "clinic_address": "Clinic Address" 
+  "clinic_address": "Clinic Address" ,
+  "complete"  : "Complete",
+  "finish" : "Finish"
  
 }
