--- a/lang/ar.json
+++ b/lang/ar.json
@@ -199,6 +199,8 @@
    "street": "الشارع",
    "special_mark": "علامة خاص",
    "clinic_address_description": "يرجى ادخال عنوان عيادتك بشكل دقيق للمساعدة في الوصول إليك بسهولة للمرضى.",
-   "clinic_address": "عنوان العيادة"
+   "clinic_address": "عنوان العيادة",
+   "complete"  : "مكتمل",
+   "finish" : "انهاء"
  
   }
