Add filter functionality and UI enhancements for doctor search
- Added filter key to Arabic and English language files.
- Introduced sorting options for doctors based on name, specialty, price, and rating.
- Implemented a custom search bar with sorting capabilities.
- Added a new SVG asset for empty search results.
- Enhanced doctor model with sample data for testing.
- Updated UI components to support new features and improve user experience.

--- a/lang/en.json
+++ b/lang/en.json
@@ -189,6 +189,7 @@
   "first_name": "First Name",
   "last_name": "Last Name",
   "bio": "Bio",
+  "filter": "Filter",
   "doctor": "Doctor",
   "patient":  "Patient",
   "country":  "Country",
