--- a/lang/ar.json
+++ b/lang/ar.json
@@ -190,6 +190,7 @@
    "first_name": "الاسم الاول",
    "last_name": "الاسم الاخير",
    "bio": "السيرة الذاتية",
+   "filter": "تصفية",
    "doctor": "طبيب",
    "patient": "مريض",
    "country": "الدولة",
