Add emergency department feature with Arabic and English data

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -202,6 +202,7 @@
    "clinic_address_description": "يرجى ادخال عنوان عيادتك بشكل دقيق للمساعدة في الوصول إليك بسهولة للمرضى.",
    "clinic_address": "عنوان العيادة",
    "complete"  : "مكتمل",
-   "finish" : "انهاء"
+   "finish" : "انهاء",
+   "emergency_department" : "قسم الطوارئ"
  
   }
