--- a/lang/en.json
+++ b/lang/en.json
@@ -202,5 +202,6 @@
   "clinic_address": "Clinic Address" ,
   "complete"  : "Complete",
   "finish" : "Finish"
- 
+ ,
+ "emergency_department"  : "Emergency Department"
 }
