Add localization for time-related strings and implement MessageTimeWidget for displaying message timestamps

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -204,6 +204,7 @@
    "complete"  : "مكتمل",
    "finish" : "انهاء",
    "emergency_department" : "قسم الطوارئ",
-   "top_doctors" : "أفضل الأطباء"
-
+   "top_doctors" : "أفضل الأطباء",
+   "yesterday" : "أمس",
+  "now" : "الآن"  
   }
