Refactor localization files for Arabic and English, adding new keys and updating existing translations. Update DioConfigurator to include service locator for logging. Enhance language keys with new constants for review functionality. Revamp doctor info model to include review details and create new review widgets for better UI representation. Implement Bloc pattern for reviews management, ensuring proper state handling and refreshing capabilities. Remove deprecated review widget files and consolidate review display logic.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -25,7 +25,7 @@
   "current_password": "كلمة المرور  الحالية",
   "new_password": "كلمة المرور الجديدة",
   "confirm_new_password": "تأكيد كلمة المرور الجديدة",
-   "forgot_password": "نسيت كلمة المرور؟",
+  "forgot_password": "نسيت كلمة المرور؟",
   "no_account": "ليس لديك حساب؟",
   "create_account": "إنشاء حساب",
   "description_register": "سجل الآن لاستكشاف جميع ميزات تطبيقنا. نحن متحمسون لانضمامك إلى مجتمعنا!",
@@ -46,7 +46,7 @@
   "submit": "إرسال",
   "or": "أو",
   "hi_mohamed": "مرحبا محــمد 👋",
-  "banner_book_home":  "احجز \nواجد الطبيب \nالأقرب إليك",
+  "banner_book_home": "احجز \nواجد الطبيب \nالأقرب إليك",
   "find_nearby": "ابحث عن الأقرب",
   "how_are_you_today": "كيف حالك اليوم؟",
   "see_all": "اظهار الكل",
@@ -101,9 +101,9 @@
   "address": "العنوان",
   "full_name": "الاسم الكامل",
   "phone_number": "رقم الهاتف",
-  "complete_profile":  "اكمل الملف الشخصي",
-    "complete_profile_title": "اكمل الملف الشخصي",
-  "description_complete_profile"  :"لا تقلق ، فقط يمكنك رؤية بياناتك الشخصية ، لا يمكن لاحد اخر لرؤيتها.",
+  "complete_profile": "اكمل الملف الشخصي",
+  "complete_profile_title": "اكمل الملف الشخصي",
+  "description_complete_profile": "لا تقلق ، فقط يمكنك رؤية بياناتك الشخصية ، لا يمكن لاحد اخر لرؤيتها.",
   "no_data": "لا توجد بيانات",
   "doctor_details": "تفاصيل الطبيب",
   "egp": "ج.م",
@@ -126,86 +126,88 @@
   "friday": "الجمعة",
   "am": "ص",
   "pm": "م",
-   "medical_degree": "الدرجة الطبية",
-   "add_review": "اضف تقييم",
-   "your_review": "تقييمك",
-   "rate": "تقييم",
-   "please_enter_review": "يرجى ادخال التقييم",
-   "contact_us": "اتصل بنا",
-   "faq": "الاسئلة الشائعة",
-  "customer_service":  "خدمة العملاء",
-  "how_do_we_help_you":   "كيف يمكننا مساعدتك؟",
-  "send":    "ارسل",
-  "whatsApp":   "واتساب",
-  "website":  "موقع الانترنت",
-  "facebook":  "فيسبوك",
-  "x":  "X",
-  "instagram":  "انستقرام",
-  "dr":  "د.ك",
-  "no_bio":  "لا يوجد بيو لهذا الطبيب",
-  "consultation_price":  "سعر الاستشارة",
-  "medical_specialization":  "التخصص الطبي",
-  "doctor_not_have_location_info_maps":  "لا يوجد معلومات عن الموقع لهذا الطبيب",
-"set_manual":  "تحديد يدوي",
-  "select_date":  " حدد التاريخ",
-  "select_time":  "حدد الوقت",
-  "available_time":  "الوقت المتاح",
-  "not_available_to_book":  "غير متاح للحجز",
-  "payment_book":  "دفع الحجز",
-  "my_appointments":  "مواعيدي",
-   "pending":  "قيد الانتظار",
-  "paided" : "مدفوع",
-  "payment" : "دفع",
-  "reschedule" : "اعادة الجدولة",
-   "cancel_appointment" : "الغاء الحجز",
-   "cancel_appointment_message" : "هل أنت متأكد من أنك تريد الغاء الحجز؟",
-   "try_again" : "أعادة المحاولة",
-   "reschedule_message" : "هل أنت متأكد من أنك تريد اعادة جدولة الحجز؟",
-   "work_start_time_from": "وقت البدء من",
-   "to": "حتى",
-   "day": "يوم",
-   "days": "ايام",
-   "from": "من",
-   "add_working_hours": "اضافة ساعات العمل",
-   "select_working_day": "حدد يوم العمل",
-   "back": "رجوع",
-   "save": "حفظ",
-   "start_time": "وقت البدء",
-   "end_time": "وقت الانتهاء",
-   "update": "تحديث",
-   "swipe_to_update": "اسحب للتعديل",
-   "swipe_to_delete": "اسحب للحذف",
-   "update_working_time": "تحديث ساعات العمل",
-   "update_working_time_message": "هل أنت متأكد من أنك تريد تحديث ساعات العمل؟",
-   "delete_working_time": "حذف ساعات العمل",
-   "delete_working_time_message": "هل أنت متأكد من أنك تريد حذف ساعات العمل؟",
-   "add_working_time": "اضافة ساعات العمل",
-   "add_working_time_message": "هل أنت متأكد من أنك تريد اضافة ساعات العمل؟",
-   "delete_working_time_success": "تم حذف ساعات العمل بنجاح",
-   "update_working_time_success": "تم تحديث ساعات العمل بنجاح",
-   "add_working_time_success": "تم اضافة ساعات العمل بنجاح",
-   "add_working_time_failed": "فشل اضافة ساعات العمل",
-   "update_working_time_failed": "فشل تحديث ساعات العمل",
-   "delete_working_time_failed": "فشل حذف ساعات العمل",
-   "first_name": "الاسم الاول",
-   "last_name": "الاسم الاخير",
-   "bio": "السيرة الذاتية",
-   "filter": "تصفية",
-   "doctor": "طبيب",
-   "patient": "مريض",
-   "country": "الدولة",
-   "governorate": "المحافظة",
-   "city": "المدينة",
-   "area": "المنطقة",
-   "street": "الشارع",
-   "special_mark": "علامة خاص",
-   "clinic_address_description": "يرجى ادخال عنوان عيادتك بشكل دقيق للمساعدة في الوصول إليك بسهولة للمرضى.",
-   "clinic_address": "عنوان العيادة",
-   "complete"  : "مكتمل",
-   "finish" : "انهاء",
-   "emergency_department" : "قسم الطوارئ",
-   "top_doctors" : "أفضل الأطباء",
-   "yesterday" : "أمس",
-   "no_doctors_found" : "لم يتم العثور على اطباء",
-  "now" : "الآن"  
-  }
+  "medical_degree": "الدرجة الطبية",
+  "add_review": "اضف تقييم",
+  "your_review": "تقييمك",
+  "rate": "تقييم",
+  "please_enter_review": "يرجى ادخال التقييم",
+  "contact_us": "اتصل بنا",
+  "faq": "الاسئلة الشائعة",
+  "customer_service": "خدمة العملاء",
+  "how_do_we_help_you": "كيف يمكننا مساعدتك؟",
+  "send": "ارسل",
+  "whatsApp": "واتساب",
+  "website": "موقع الانترنت",
+  "facebook": "فيسبوك",
+  "x": "X",
+  "instagram": "انستقرام",
+  "dr": "د.ك",
+  "no_bio": "لا يوجد بيو لهذا الطبيب",
+  "consultation_price": "سعر الاستشارة",
+  "medical_specialization": "التخصص الطبي",
+  "doctor_not_have_location_info_maps": "لا يوجد معلومات عن الموقع لهذا الطبيب",
+  "set_manual": "تحديد يدوي",
+  "select_date": " حدد التاريخ",
+  "select_time": "حدد الوقت",
+  "available_time": "الوقت المتاح",
+  "not_available_to_book": "غير متاح للحجز",
+  "payment_book": "دفع الحجز",
+  "my_appointments": "مواعيدي",
+  "pending": "قيد الانتظار",
+  "paided": "مدفوع",
+  "payment": "دفع",
+  "reschedule": "اعادة الجدولة",
+  "cancel_appointment": "الغاء الحجز",
+  "cancel_appointment_message": "هل أنت متأكد من أنك تريد الغاء الحجز؟",
+  "try_again": "أعادة المحاولة",
+  "reschedule_message": "هل أنت متأكد من أنك تريد اعادة جدولة الحجز؟",
+  "work_start_time_from": "وقت البدء من",
+  "to": "حتى",
+  "day": "يوم",
+  "days": "ايام",
+  "from": "من",
+  "add_working_hours": "اضافة ساعات العمل",
+  "select_working_day": "حدد يوم العمل",
+  "back": "رجوع",
+  "save": "حفظ",
+  "start_time": "وقت البدء",
+  "end_time": "وقت الانتهاء",
+  "update": "تحديث",
+  "swipe_to_update": "اسحب للتعديل",
+  "swipe_to_delete": "اسحب للحذف",
+  "update_working_time": "تحديث ساعات العمل",
+  "update_working_time_message": "هل أنت متأكد من أنك تريد تحديث ساعات العمل؟",
+  "delete_working_time": "حذف ساعات العمل",
+  "delete_working_time_message": "هل أنت متأكد من أنك تريد حذف ساعات العمل؟",
+  "add_working_time": "اضافة ساعات العمل",
+  "add_working_time_message": "هل أنت متأكد من أنك تريد اضافة ساعات العمل؟",
+  "delete_working_time_success": "تم حذف ساعات العمل بنجاح",
+  "update_working_time_success": "تم تحديث ساعات العمل بنجاح",
+  "add_working_time_success": "تم اضافة ساعات العمل بنجاح",
+  "add_working_time_failed": "فشل اضافة ساعات العمل",
+  "update_working_time_failed": "فشل تحديث ساعات العمل",
+  "delete_working_time_failed": "فشل حذف ساعات العمل",
+  "first_name": "الاسم الاول",
+  "last_name": "الاسم الاخير",
+  "bio": "السيرة الذاتية",
+  "filter": "تصفية",
+  "doctor": "طبيب",
+  "patient": "مريض",
+  "country": "الدولة",
+  "governorate": "المحافظة",
+  "city": "المدينة",
+  "area": "المنطقة",
+  "street": "الشارع",
+  "special_mark": "علامة خاص",
+  "clinic_address_description": "يرجى ادخال عنوان عيادتك بشكل دقيق للمساعدة في الوصول إليك بسهولة للمرضى.",
+  "clinic_address": "عنوان العيادة",
+  "complete": "مكتمل",
+  "finish": "انهاء",
+  "emergency_department": "قسم الطوارئ",
+  "top_doctors": "أفضل الأطباء",
+  "yesterday": "أمس",
+  "no_doctors_found": "لم يتم العثور على اطباء",
+  "already_rated": "لقد قمت بتقييم هذا الطبيب من قبل، يمكنك تعديل تقييمك",
+
+  "now": "الآن"
+}
