--- a/lang/en.json
+++ b/lang/en.json
@@ -23,9 +23,9 @@
   "change_password": "Change Password",
   "description_change_password": "Change your password to keep your account secure.",
   "current_password": "Current Password",
-   "new_password": "New Password",
+  "new_password": "New Password",
   "confirm_new_password": "Confirm New Password",
-   "forgot_password": "Forgot Password?",
+  "forgot_password": "Forgot Password?",
   "no_account": "Don't have an account?",
   "create_account": "Create Account",
   "description_register": "Sign up now to explore everything our app has to offer. We're thrilled to have you join us!",
@@ -96,27 +96,27 @@
   "male": "Male",
   "female": "Female",
   "birth_date": "Date of Birth",
-  "your_age":  "Your Age",
+  "your_age": "Your Age",
   "phone": "Phone",
   "address": "Address",
   "full_name": "Full Name",
   "phone_number": "Phone Number",
   "complete_profile": "Complete Profile",
-  "complete_profile_title":"Complete Your Profile",
-  "description_complete_profile"  :"Don't worry, only you can see your personal data, No one else will be able see it.",
+  "complete_profile_title": "Complete Your Profile",
+  "description_complete_profile": "Don't worry, only you can see your personal data, No one else will be able see it.",
   "no_data": "No data found",
   "doctor_details": "Doctor Details",
   "egp": "EGP",
   "specialty": "Specialty",
   "experience": "Experience",
   "book_appointment": "Book Appointment",
-   "about": "About",
+  "about": "About",
   "about_me": "About Me",
   "reviews": "Reviews",
   "location": "Location",
   "location_me": "Location Me",
   "working_time": "Working Time",
-   "saturday": "Saturday",
+  "saturday": "Saturday",
   "sunday": "Sunday",
   "monday": "Monday",
   "tuesday": "Tuesday",
@@ -135,12 +135,12 @@
   "customer_service": "Customer Service",
   "how_do_we_help_you": "How do we help you?",
   "send": "Send",
-  "whatsApp":  "WhatsApp",
+  "whatsApp": "WhatsApp",
   "website": "Website",
   "facebook": "Facebook",
   "x": "X",
   "instagram": "Instagram",
-  "dr"  :"Dr",
+  "dr": "Dr",
   "no_bio": "No bio found for this doctor",
   "consultation_price": "Consultation Price",
   "medical_specialization": "Medical Specialization",
@@ -153,13 +153,13 @@
   "payment_book": "Payment Book",
   "my_appointments": "My Appointments",
   "pending": "Pending",
-  "paided" : "Paided",
-  "payment" : "Payment",
-  "reschedule" : "Reschedule",
-  "cancel_appointment" : "Cancel Appointment",
-  "cancel_appointment_message" : "Are you sure you want to cancel the appointment?",
-  "try_again" : "Try Again",
-  "reschedule_message" : "Are you sure you want to reschedule the appointment?",
+  "paided": "Paided",
+  "payment": "Payment",
+  "reschedule": "Reschedule",
+  "cancel_appointment": "Cancel Appointment",
+  "cancel_appointment_message": "Are you sure you want to cancel the appointment?",
+  "try_again": "Try Again",
+  "reschedule_message": "Are you sure you want to reschedule the appointment?",
   "work_start_time_from": "Work Start Time From",
   "to": "to",
   "day": "Day",
@@ -176,36 +176,36 @@
   "swipe_to_delete": "Swipe to delete",
   "update_working_time": "Update Working Time",
   "update_working_time_message": "Are you sure you want to update working time?",
-  "delete_working_time":  "Delete Working Time",
-  "delete_working_time_message":  "Are you sure you want to delete working time?",
+  "delete_working_time": "Delete Working Time",
+  "delete_working_time_message": "Are you sure you want to delete working time?",
   "add_working_time": "Add Working Time",
-  "add_working_time_message":  "Are you sure you want to add working time?",
+  "add_working_time_message": "Are you sure you want to add working time?",
   "delete_working_time_success": "Working time deleted successfully",
   "update_working_time_success": "Working time updated successfully",
   "add_working_time_success": "Working time added successfully",
   "add_working_time_failed": "Failed to add working time",
-  "update_working_time_failed":  "Failed to update working time",
-  "delete_working_time_failed":   "Failed to delete working time",
+  "update_working_time_failed": "Failed to update working time",
+  "delete_working_time_failed": "Failed to delete working time",
   "first_name": "First Name",
   "last_name": "Last Name",
   "bio": "Bio",
   "filter": "Filter",
   "doctor": "Doctor",
-  "patient":  "Patient",
-  "country":  "Country",
-  "governorate":  "Governorate",
-  "city":  "City",
-  "area":  "Area",
-  "street":  "Street",
- "special_mark": "Special Mark",
+  "patient": "Patient",
+  "country": "Country",
+  "governorate": "Governorate",
+  "city": "City",
+  "area": "Area",
+  "street": "Street",
+  "special_mark": "Special Mark",
   "clinic_address_description": "Please enter your clinic's address accurately, including governorate, city, area, and street name to help patients reach you easily.",
-  "clinic_address": "Clinic Address" ,
-  "complete"  : "Complete",
-  "finish" : "Finish" ,
- "emergency_department"  : "Emergency Department",
-  "top_doctors" : "Top Doctors",
-  "yesterday" : "Yesterday",
-  "no_doctors_found" : "No doctors found",
- 
-  "now" : "Now"
+  "clinic_address": "Clinic Address",
+  "complete": "Complete",
+  "finish": "Finish",
+  "emergency_department": "Emergency Department",
+  "top_doctors": "Top Doctors",
+  "yesterday": "Yesterday",
+  "no_doctors_found": "No doctors found",
+  "already_rated": "You have already rated ,You can edit your review",
+  "now": "Now"
 }
