Add localization for "you" key in Arabic and English; update ReviewItemWidget to display user-specific review actions.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -208,6 +208,6 @@
   "yesterday": "أمس",
   "no_doctors_found": "لم يتم العثور على اطباء",
   "already_rated": "لقد قمت بتقييم هذا الطبيب من قبل، يمكنك تعديل تقييمك",
-
+"you": "أنت",
   "now": "الآن"
 }
