--- a/lang/en.json
+++ b/lang/en.json
@@ -207,5 +207,6 @@
   "yesterday": "Yesterday",
   "no_doctors_found": "No doctors found",
   "already_rated": "You have already rated ,You can edit your review",
+  "you": "You",
   "now": "Now"
 }
