feat: Implement rescheduling functionality for patient appointments
- Added `RescheduleBookAppointmentScreen` to handle rescheduling of appointments.
- Created `CustomAppbarRescaheduleBookAppointment` for the reschedule screen.
- Developed `AvailbleDatesWidget` and `AvailableTimeWidget` for selecting dates and times.
- Introduced `BuildSuccessScheduleWidget`, `BuildErrorScheduleWidget`, and `BuildEmptyScheduleWidget` for displaying appointment status.
- Integrated state management using `Bloc` for handling appointment scheduling states.
- Enhanced UI with new widgets for displaying doctor details and consultation prices.
- Added localization support for various text elements.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -208,6 +208,9 @@
   "yesterday": "أمس",
   "no_doctors_found": "لم يتم العثور على اطباء",
   "already_rated": "لقد قمت بتقييم هذا الطبيب من قبل، يمكنك تعديل تقييمك",
-"you": "أنت",
+  "no_availability": "لا يوجد مواعيد متاحة",
+  "already_booked": "هذا الموعد محجوز بالفعل.\nيرجى اختيار موعد اخر",
+  "schedule": "الجدول",
+  "you": "أنت",
   "now": "الآن"
 }
