feat: Add rescheduling success messages and refactor appointment handling

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -211,6 +211,7 @@
   "no_availability": "لا يوجد مواعيد متاحة",
   "already_booked": "هذا الموعد محجوز بالفعل.\nيرجى اختيار موعد اخر",
   "schedule": "الجدول",
+  "reschedule_success": "تم اعادة جدولة الحجز بنجاح",
   "you": "أنت",
   "now": "الآن"
 }
