feat: Refactor appointment booking to reservations
- Updated language files to replace "appointments" with "reservations" in both Arabic and English.
- Renamed API endpoints and related methods to reflect the change from appointment booking to reservations.
- Removed the AppointmentBookingDoctorModel and replaced it with ReservationsDoctorModel.
- Created new use cases, cubits, and states for handling reservations.
- Implemented new UI screens and widgets for displaying reservations.
- Added custom app bar for the reservations screen.
- Removed obsolete appointment booking screen and related widgets.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -212,6 +212,10 @@
   "already_booked": "هذا الموعد محجوز بالفعل.\nيرجى اختيار موعد اخر",
   "schedule": "الجدول",
   "reschedule_success": "تم اعادة جدولة الحجز بنجاح",
+  "appointments": "مواعيد",
+  "add_history": "إضافة سجل",
+  "view_history": "عرض السجل",
+  "reservations_doctor": "حجوزات الطبيب",
   "you": "أنت",
   "now": "الآن"
 }
