--- a/lang/en.json
+++ b/lang/en.json
@@ -216,6 +216,7 @@
   "view_history": "View History",
   "reservations_doctor": "Reservations Doctor",
   "no_reservations":  "No reservations available yet",
+  "unpaid": "Unpaid",
   "you": "You",
   "now": "Now"
 }
