--- a/lang/en.json
+++ b/lang/en.json
@@ -217,6 +217,8 @@
   "reservations_doctor": "Reservations Doctor",
   "no_reservations":  "No reservations available yet",
   "unpaid": "Unpaid",
+  "total_appointments": "Total Appointments",
+  "appointments_overview": "Appointments Overview",
   "you": "You",
   "now": "Now"
 }
