feat: Implement patient history screen with loading, success, error, and empty states

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -220,6 +220,7 @@
   "unpaid": "غير مدفوع",
   "total_appointments": "إجمالي المواعيد",
   "appointments_overview": "ملخص المواعيد",
+  "loading": "جاري التحميل...",
   "you": "أنت",
   "now": "الآن"
 }
