--- a/lang/en.json
+++ b/lang/en.json
@@ -219,6 +219,7 @@
   "unpaid": "Unpaid",
   "total_appointments": "Total Appointments",
   "appointments_overview": "Appointments Overview",
+  "loading": "Loading...",
   "you": "You",
   "now": "Now"
 }
