--- a/lang/en.json
+++ b/lang/en.json
@@ -221,5 +221,10 @@
   "appointments_overview": "Appointments Overview",
   "loading": "Loading...",
   "you": "You",
+  "add_new_note": "Add New Note",
+  "add": "Add",
+  "add_note": "Add Note",
+  "history_patient": "History Patient",
+  "write_note_here": "Write note here...",
   "now": "Now"
 }
