feat: Add notes localization and enhance PatientHistoryItemWidget with notes display

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -224,6 +224,7 @@
   "you": "أنت",
   "add_new_note":  "إضافة ملاحظة جديدة",
   "add":  "إضافة",
+  "notes":  "الملاحظات",
   "add_note":  "إضافة ملاحظة",
   "history_patient":  "سجل المريض",
   "write_note_here":  "كتابة ملاحظة هنا...",
