--- a/lang/en.json
+++ b/lang/en.json
@@ -223,6 +223,7 @@
   "you": "You",
   "add_new_note": "Add New Note",
   "add": "Add",
+  "notes": "Notes",
   "add_note": "Add Note",
   "history_patient": "History Patient",
   "write_note_here": "Write note here...",
