feat: Add statistics localization and update UI components for better visual consistency

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -228,5 +228,6 @@
   "add_note":  "إضافة ملاحظة",
   "history_patient":  "سجل المريض",
   "write_note_here":  "كتابة ملاحظة هنا...",
+  "statistics":  "الإحصاءات",
   "now": "الآن"
 }
