--- a/lang/en.json
+++ b/lang/en.json
@@ -227,5 +227,6 @@
   "add_note": "Add Note",
   "history_patient": "History Patient",
   "write_note_here": "Write note here...",
+  "statistics": "Statistics",
   "now": "Now"
 }
