feat: Enhance localization for patient history with new empty state messages

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -222,12 +222,14 @@
   "appointments_overview": "ملخص المواعيد",
   "loading": "جاري التحميل...",
   "you": "أنت",
-  "add_new_note":  "إضافة ملاحظة جديدة",
-  "add":  "إضافة",
-  "notes":  "الملاحظات",
-  "add_note":  "إضافة ملاحظة",
-  "history_patient":  "سجل المريض",
-  "write_note_here":  "كتابة ملاحظة هنا...",
-  "statistics":  "الإحصاءات",
+  "add_new_note": "إضافة ملاحظة جديدة",
+  "add": "إضافة",
+  "notes": "الملاحظات",
+  "add_note": "إضافة ملاحظة",
+  "history_patient": "سجل المريض",
+  "write_note_here": "كتابة ملاحظة هنا...",
+  "statistics": "الإحصاءات",
+  "no_history_description":  "قم بالضغط على زر + لإضافة ملاحظة جديدة",
+  "no_history":  "لا يوجد سجل حتى الآن",
   "now": "الآن"
 }
