feat: Update popular doctor terminology and enhance filtering logic for better rating accuracy

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -51,7 +51,7 @@
   "how_are_you_today": "كيف حالك اليوم؟",
   "see_all": "اظهار الكل",
   "doctor_speciality": "التخصصات الطبية",
-  "popular_doctor": "الأطباء المحبوبين",
+  "popular_doctor":  "الأطباء الأكثر تقييما",
   "general": "عام",
   "ent": "الأنف والأذن والحنجرة",
   "pediatric": "طب الأطفال",
