--- a/lang/en.json
+++ b/lang/en.json
@@ -51,7 +51,7 @@
   "find_nearby": "Find Nearby",
   "see_all": "See All",
   "doctor_speciality": "Doctor Speciality",
-  "popular_doctor": "Popular Doctor",
+  "popular_doctor": "The highest rated doctors",
   "general": "General",
   "ent": "Ent",
   "pediatric": "Pediatric",
