Refactor code structure for improved readability and maintainability

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -46,7 +46,7 @@
   "submit": "إرسال",
   "or": "أو",
   "hi_mohamed": "مرحبا محــمد 👋",
-  "banner_book_home": "احجز \nواجد الطبيب \nالأقرب إليك",
+  "banner_book_home": "للطوارئ.. نحن هنا لمساعدتك فورًا.",
   "find_nearby": "ابحث عن الأقرب",
   "how_are_you_today": "كيف حالك اليوم؟",
   "see_all": "اظهار الكل",
@@ -204,6 +204,7 @@
   "complete": "مكتمل",
   "finish": "انهاء",
   "emergency_department": "قسم الطوارئ",
+  "to_emergency": "للطوارئ",
   "top_doctors": "أفضل الأطباء",
   "yesterday": "أمس",
   "no_doctors_found": "لم يتم العثور على اطباء",
