--- a/lang/en.json
+++ b/lang/en.json
@@ -47,7 +47,7 @@
   "or": "or",
   "hi_mohamed": "Hi Mohamed 👋",
   "how_are_you_today": "How are you today?",
-  "banner_book_home": "Book and schedule with nearest doctor",
+  "banner_book_home": "Emergency... we are here to help you immediately.",
   "find_nearby": "Find Nearby",
   "see_all": "See All",
   "doctor_speciality": "Doctor Speciality",
@@ -203,6 +203,7 @@
   "complete": "Complete",
   "finish": "Finish",
   "emergency_department": "Emergency Department",
+  "to_emergency": "To Emergency",
   "top_doctors": "Top Doctors",
   "yesterday": "Yesterday",
   "no_doctors_found": "No doctors found",
