feat: Update Arabic translations and improve UI elements in home and reviews sections

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -46,7 +46,7 @@
   "submit": "إرسال",
   "or": "أو",
   "hi_mohamed": "مرحبا محــمد 👋",
-  "banner_book_home": "للطوارئ.. نحن هنا لمساعدتك فورًا.",
+  "banner_book_home": "حالتك الطارئة تهمن.. نحن هنا لمساعدتك فورًا.",
   "find_nearby": "ابحث عن الأقرب",
   "how_are_you_today": "كيف حالك اليوم؟",
   "see_all": "اظهار الكل",
